--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -59,22 +59,22 @@
 @import "./Layout/rightside_bar";
 
 // Components scss
-@import "./components/alerts";
-@import "./components/accordion";
-@import "./components/background";
-@import "./components/button";
-@import "./components/dropdown";
-@import "./components/helper";
-@import "./components/form";
-@import "./components/avatar";
-@import "./components/badge";
-@import "./components/card";
-@import "./components/modal";
-@import "./components/nav-tabs";
-@import "./components/spinner";
-@import "./components/offcanvas";
-@import "./components/table";
-@import "./components/gallery";
+@import "./Components/alerts";
+@import "./Components/accordion";
+@import "./Components/background";
+@import "./Components/button";
+@import "./Components/dropdown";
+@import "./Components/helper";
+@import "./Components/form";
+@import "./Components/avatar";
+@import "./Components/badge";
+@import "./Components/card";
+@import "./Components/modal";
+@import "./Components/nav-tabs";
+@import "./Components/spinner";
+@import "./Components/offcanvas";
+@import "./Components/table";
+@import "./Components/gallery";
 
 // Plugins scss
 @import "./Plugins/recharts";
